# rl-collision-avoidance

./: .gitignore  README.md  circle_world.py  gym_ppo_stage1_one_agent.py  gym_stage_one_agent_.py  ppo_stage.py  ppo_stage1.py  stage_world.py  stage_world1.py  test_world.py  wander_human.py
DDPG/: ddpg_stage.py  ddpg_stage_world.py
DDPG/model/: ddpg.py  net.py  replay_memory.py  utils.py
SAC/: sac_stage.py  stage_world.py
SAC/model/: net.py  replay_memory.py  sac.py
TD3/: td3_stage.py
TD3/model/: net.py  replay_memory.py  sac.py  td3.py
TRPO/: simple_world.py  trpo_stage.py
TRPO/model/: net.py  trpo.py
model/: net.py  ppo.py  utils.py
ppo/: README.md  circle_test.py  gym_ppo_stage1_one_agent.py  gym_stage_human.py  gym_stage_one_agent_.py  ppo_stage1.py  ppo_stage1_single.py  ppo_stage2.py  stage_env.py  stage_world2.py  wander_human.py
ppo/model/: net.py  ppo.py
stage_ros-add_pose_and_crash/: CMakeLists.txt  package.xml
stage_ros-add_pose_and_crash/launch/: maptest.launch  stage_test.launch
stage_ros-add_pose_and_crash/launch/params/: amcl_params.yaml
stage_ros-add_pose_and_crash/rviz/: robot_navigation.rviz
stage_ros-add_pose_and_crash/src/: stageros.cpp  stageros_w.cpp
stage_ros-add_pose_and_crash/test/: cmdpose_tests.xml
stage_ros-add_pose_and_crash/world/: simple.world
stage_ros-add_pose_sub/: .travis.yml  CHANGELOG.rst  CMakeLists.txt  package.xml
stage_ros-add_pose_sub/rviz/: stage.rviz
stage_ros-add_pose_sub/scripts/: upgrade-world.sh
stage_ros-add_pose_sub/src/: stageros.cpp
stage_ros-add_pose_sub/test/: cmdpose_tests.py  hztest.xml
stage_ros-add_pose_sub/world/: willow-erratic.world  willow-four-erratics-multisensor.world  willow-four-erratics.world  willow-full.pgm
stage_ros/src/: stageros.cpp
worlds/: Obstacles.world  circle.world  rink2.yaml  simple.world  single_robot.world  stage1.world  stage2.world  stage_simple_cir.world  stage_turtlebot_test.world
